[metadata]
author = Yi Guo, Taylor Parsons and Ryan King
author_email= systems.engineering@nrel.gov
description= Sizing model for wind turbine hub and nacelle components
requires-dist= openmdao.main
keywords= openmdao
license = Apache License, Version 2.0
version = 0.1.0
name= DriveSE
url=
download-url=
project-url=
description=file=README

