[easy_install]
find_links = "https://api.github.com/repos/WISDEM/DriveWPACT/tarball"
             "https://api.github.com/repos/FUSED-Wind/fusedwind/tarball"

[metadata]
name = DriveSE
version = 0.1.0
summary = Sizing model for wind turbine hub and nacelle components
description-file = README
keywords = openmdao
home-page =
download-url=
author = Yi Guo, Taylor Parsons and Ryan King
author_email= systems.engineering@nrel.gov
maintainer = Yi Guo, Taylor Parsons and Ryan King
maintainer-email = systems.engineering@nrel.gov
license = Apache License, Version 2.0
classifier = Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
requires-dist = openmdao.main, algopy, DriveWPACT, fusedwind
provides-dist=
obsoletes-dist =
requires-python =
  >=2.7
  <3.0
requires-externals =
project-url=

[openmdao]
copyright =
static_path = [ '_static' ]
